--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,10 @@
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.php [QSA,L]
+
+RedirectMatch 404 README.md
+RedirectMatch 404 db.schema.sql
+RedirectMatch 404 composer.json
+RedirectMatch 404 composer.lock
+RedirectMatch 404 vendor
 RedirectMatch 404 /\.git
